# CainCamera

./: build.gradle  settings.gradle
app/: build.gradle
medialibrary/src/main/cpp/: CMakeLists.txt
medialibrary/src/main/cpp/AVRecorder/: CMakeLists.txt  common.h  egl_core.h  gl_tools.h  gpu_texture_frame_copier.h  live_common_packet_pool.h  live_video_packet_queue.h  recording_preview_controller.h  recording_preview_renderer.h  soft_encoder_adapter.cpp  texture_frame_copier.h  video_gl_surface_render.h
medialibrary/src/main/cpp/CainFilter/: CMakeLists.txt  FilterManager.cpp
medialibrary/src/main/cpp/CainFilter/filter/: GLFilter.h
medialibrary/src/main/cpp/CainFilter/filter/effect/: GLCommonFrameFilter.cpp  GLCommonFrameFilter.h
medialibrary/src/main/cpp/CainFilter/filter/transtion/: TransitionSceneFilter.cpp  TransitionSceneFilter.h
medialibrary/src/main/cpp/Common/: AVFormat.cpp  AVFormat.h  AVFormatter.h  YuvConvertor.cpp
medialibrary/src/main/cpp/FFMediaRecorder/: FFMediaRecorder.cpp
medialibrary/src/main/cpp/FLVRecorder/: CMakeLists.txt  FFMediaRecorder.cpp  FFMediaRecorder.h  FLVRecorder.cpp  FLVRecorder.h  RecordParams.cpp  aw_encode_flv.c  aw_sw_x264_encoder.c  aw_x264.c  com_cgfay_media_recorder_FLVRecorder.cpp
medialibrary/src/main/cpp/FLVRecorder/common/: aw_file.c  aw_log.h
medialibrary/src/main/cpp/MediaPlayer/android/: CainMediaPlayer.h  com_cgfay_media_CainMediaPlayer.cpp
medialibrary/src/main/cpp/MediaPlayer/source/decoder/: VideoHWDecoder.cpp  VideoHWDecoder.h
medialibrary/src/main/cpp/MediaRecorder/: CMakeLists.txt  FLVRecorder.cpp  MediaRecorder.cpp  MediaRecorder.h  aw_encode_flv.c  aw_x264.c  com_cgfay_media_recorder_FLVRecorder.cpp  com_cgfay_media_recorder_MediaRecorder.cpp  common.h  handler.cpp  hw_encoder_adapter.cpp  hw_encoder_adapter.h  live_audio_packet_queue.h  mp4record.c  mp4record.h  recording_preview_controller.cpp  recording_preview_renderer.cpp  soft_encoder_adapter.h  texture_frame.h  video_encoder_adapter.h
medialibrary/src/main/cpp/MiniRecorder/: CMakeLists.txt  MiniRecorder.cpp  MiniRecorder.h  MsgQueue.cpp  com_cgfay_media_recorder_MiniRecorder.cpp  handler.h  live_audio_packet_queue.h  live_video_packet_queue.cpp  live_video_packet_queue.h  mp4record.c  utils.h
medialibrary/src/main/cpp/VideoEditor/: AudioOutput.cpp  AudioOutput.h  FFMPEGVideoDecoder.cpp  FFMPEGVideoDecoder.h  MediaCodecVideoDecoder.cpp  MediaSync.cpp  MediaSync.h  VideoDecoder.cpp  VideoDecoder.h  VideoEditor.cpp  VideoEditor.h  VideoOutput.cpp
medialibrary/src/main/cpp/VideoEditor2/: CMakeLists.txt  MsgQueue.cpp  MsgQueue.h  VideoEditor.cpp  VideoEditor.h  VideoOutput.h  audio_output.h  circle_texture_queue.h  com_cgfay_media_editor_VideoEditor.cpp  utils.h
medialibrary/src/main/cpp/VideoEffect/: CMakeLists.txt
medialibrary/src/main/cpp/VideoEffect/decoder/: scene_video_decoder.cpp
medialibrary/src/main/cpp/VideoEffect/editmodel/png_sequence/: png_sequence_filter.cpp  png_sequence_filter.h
medialibrary/src/main/cpp/VideoEffect/platform_dependent/: platform_common.h  platform_ffmpeg.h
medialibrary/src/main/cpp/include/: x264.h
medialibrary/src/main/cpp/include/libmp4v2/: mp4v2.h
medialibrary/src/main/cpp/minivideoeditor/: CMakeLists.txt
medialibrary/src/main/cpp/minivideoeditor/android/: CainMediaPlayer.cpp  CainMediaPlayer.h  com_cgfay_media_CainMediaPlayer.cpp  utils.h
medialibrary/src/main/cpp/minivideoeditor/video_player/: VideoEditor.cpp  VideoEditor.h  circle_texture_queue.cpp  video_output.h
medialibrary/src/main/cpp/minivideorecorder/: CMakeLists.txt  MiniRecorder.cpp  MiniRecorder.h  MusicDecoder.cpp  Resampler.cpp  Resampler.h  aac_accompany_decoder.cpp  aac_accompany_decoder.h  accompany_decoder.h  com_cgfay_media_MusicDecoder.h  com_cgfay_media_recorder_MiniRecorder.cpp  live_audio_packet_queue.cpp  live_common_packet_pool.h  live_packet_pool.cpp  live_packet_pool.h  song_decoder_controller.cpp  song_decoder_controller.h  utils.h
medialibrary/src/main/cpp/pending/FLVRecorder/: FLVRecorder.h  aw_all.h  com_cgfay_media_recorder_FLVRecorder.cpp
medialibrary/src/main/cpp/pending/MediaRecorder/: CMakeLists.txt  MediaRecorder.cpp  MediaRecorder.h  MsgQueue.cpp  aw_faac.c  com_cgfay_media_recorder_MediaRecorder.cpp  handler.h
medialibrary/src/main/cpp/pending/MiniRecorder/: MiniRecorder.cpp  utils.h
medialibrary/src/main/cpp/pending/VideoEditor/: CMakeLists.txt  MediaCodecVideoDecoder.h  MediaSync.cpp  MediaSync.h  VideoDecoder.h  VideoOutput.h  com_cgfay_media_editor_VideoEditor.cpp  utils.h
medialibrary/src/main/cpp/pending/VideoEditor2/: CMakeLists.txt  VideoEditor.cpp  VideoOutput.cpp  audio_output.cpp  circle_texture_queue.cpp  handler.cpp  movie_frame.h  opensl_es_context.cpp  opensl_es_context.h
medialibrary/src/main/cpp/ttcommon/: CMakeLists.txt
medialibrary/src/main/cpp/ttcommon/egl_core/: egl_core.h  gl_tools.h
medialibrary/src/main/cpp/ttcommon/message_queue/: handler.h  message_queue.h
medialibrary/src/main/cpp/ttcommon/opengl_media/: movie_frame.h
medialibrary/src/main/cpp/ttcommon/opensl_media/: opensl_es_context.h
medialibrary/src/main/cpp/ttmplayer/: CMakeLists.txt
medialibrary/src/main/cpp/ttmplayer/android/: CainMediaPlayer.cpp  CainMediaPlayer.h  PlayerMessage.h  com_cgfay_media_CainMediaPlayer.cpp
medialibrary/src/main/cpp/ttmplayer/common/: CainThread.h  CommonTools.h
medialibrary/src/main/cpp/ttmplayer/video_player/: audio_output.cpp  video_output.cpp  video_output.h  video_player_controller.cpp  video_player_controller.h
medialibrary/src/main/cpp/ttvideoeditor/: CMakeLists.txt
medialibrary/src/main/cpp/ttvideosave/: CMakeLists.txt
medialibrary/src/main/cpp/ttvideosave/audio_effect/: CMakeLists.txt
medialibrary/src/main/cpp/ttvideosave/liblivecore/: CMakeLists.txt
medialibrary/src/main/cpp/ttvideosave/music_decoder/: CMakeLists.txt
medialibrary/src/main/cpp/ttvideosave/recorder_processor/: CMakeLists.txt
medialibrary/src/main/cpp/ttvideosave/video_consumer/: CMakeLists.txt
medialibrary/src/main/cpp/ttvideosave/video_encoder/: CMakeLists.txt
(+217 files in other folders)
